Add pagination when querying for all users
